Revision history for Data::Validation

         - Moved boilerplate M::B subclass code to inc/Bob.pm
         - Suppressed Konig CPAN testing again

0.6.133  2010-12-16
         - Repatched Module::Build

0.6.132  2010-12-16
         - Tried to stop Koenigs broken testing platform

0.6.123  2010-09-22
         - Switched to M::B for installs

0.5.120  2010-09-22
         - Changed str2time call in Constraints::Date

0.4.116  27/10/2009
         - Made D_V_Exception constraint name more unique as constraint
         names in Moose are fucking GLOBAL

0.4.114  29/06/2009
         - Added POD for field comparison
         - Fixed signature key

0.3.104  24/06/2009
         - Use Class::MOP in ensure_class_loaded
         - Added field comparison
         - Added more tests

0.2.85   06/06/2009
         - Fixed tests
         - Enhanced exception messages

0.2.81   05/06/2009
         - Exception class API changed

0.2.78   20/05/2009
         - Removed stupid _will method
         - Added namespace::autoclean
         - Improved testing idioms

0.2.72   24/03/2009
         - Fixed class name in date validation

0.2.70   06/03/2009
         - Added make immutable and no moose

0.2.66   14/11/2008
         - New approach to CPAN testing

0.2.64   25/10/2008
         - Switched off CPAN testing some more

0.2.60   18/10/2008
         - Switched off CPAN testing

0.2.58   03/10/2008
         - Bumped revision in POD

         05/09/2008
         - Added use strict because CPANTS doesn't recognise that use Moose is
           the same thing
         - Excluded nekoware because it's gethostbyname function is broken
         - Improved the testing methodology

         24/08/2008
         - Here Moosey, Moosey, Moosey

         22/08/2008
         - Introduced constructor which means an API change
         - Added filters

         02/06/2008
         - Made version a build requirement

         23/05/2008
         - Added POD tests

