@@ -11,19 +11,20 @@ Bob->new( {
    module     => q(Data::Validation),
    home_page  => q(http://www.roxsoft.co.uk),
    requires   => {
-      'perl'                         => q(5.008),
-      'charnames'                    => q(1.05),
-      'namespace::autoclean'         => q(0.05),
-      'version'                      => q(0.74),
-      'Class::MOP'                   => q(0.53),
-      'Email::Valid'                 => q(0.179),
-      'List::Util'                   => q(1.19),
-      'LWP::UserAgent'               => q(2.036),
-      'Moose'                        => q(0.38),
-      'Moose::Role'                  => q(0.55),
-      'Moose::Util::TypeConstraints' => q(0.21),
-      'Regexp::Common'               => q(2.120),
-      'Scalar::Util'                 => q(1.19), },
+      'perl'                         => 5.008,
+      'charnames'                    => 1.05,
+      'namespace::autoclean'         => 0.05,
+      'version'                      => 0.74,
+      'Class::MOP'                   => 0.53,
+      'Email::Valid'                 => 0.179,
+      'List::Util'                   => 1.19,
+      'LWP::UserAgent'               => 2.036,
+      'Moose'                        => 0.38,
+      'Moose::Role'                  => 0.55,
+      'Moose::Util::TypeConstraints' => 0.21,
+      'Regexp::Common'               => 2.120,
+      'Scalar::Util'                 => 1.19,
+      'Try::Tiny'                    => 0.09, },
    recommends         => { 'CatalystX::Usul::Time' => q(0.3.0), },
    configure_requires => { 'Module::Build'    => 0.32,
                            'version'          => 0.74, },
